--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "scss-loader": "0.0.1",
     "style-loader": "^0.23.0",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
@@ -26,6 +29,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1"
   }
 }
