--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "webpack-dev-server": "^3.1.9"
     },
     "dependencies": {
+        "@tweenjs/tween.js": "^17.2.0",
         "vue": "^2.5.17",
         "vue-router": "^3.0.1"
     }
