--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "@tweenjs/tween.js": "^17.2.0",
+        "animate.css": "^3.7.0",
         "vue": "^2.5.17",
         "vue-router": "^3.0.1"
     }
