--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "@tweenjs/tween.js": "^17.2.0",
         "animate.css": "^3.7.0",
         "vue": "^2.5.17",
-        "vue-router": "^3.0.1"
+        "vue-amap": "^0.5.8",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     }
 }
